fix sizing of cover page on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,7 @@ body {
 @media only screen and (max-width: 1200px) {
   .description {
     font-size: 1rem;
-    max-width: 40vh;
+    max-width: 60vh;
   }
 }
 
